--- a/index.html
+++ b/index.html
@@ -10,7 +10,44 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <script defer src="face-api.min.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.min.js'></script>
-  <script defer src="script.js"></script>
+  <script>//video_variable
+const video = document.getElementById("video");
+//////////////////////promise.all_function
+Promise.all([
+    faceapi.nets.tinyFaceDetector.loadFromUri('/models'),
+    faceapi.nets.faceLandmark68Net.loadFromUri('/models'),
+    faceapi.nets.faceRecognitionNet.loadFromUri('/models'),
+    faceapi.nets.faceExpressionNet.loadFromUri('/models')
+]).then(startVideo)
+///////////////////////start_Video_function
+function startVideo() {
+    navigator.getUserMedia({
+            video: {}
+        },
+        stream => video.srcObject = stream,
+        err => console.log(err)
+    )
+}
+////////////////////////Event_Listner_to_play
+video.addEventListener('play', () => {
+    const canvas = faceapi.createCanvasFromMedia(video)
+    document.body.append(canvas)
+    const displaySize = {
+        width: video.width,
+        height: video.height
+    }
+    faceapi.matchDimensions(canvas, displaySize)
+    setInterval(async () => {
+        const detections = await faceapi.detectAllFaces(video, new faceapi.TinyFaceDetectorOptions()).withFaceLandmarks().withFaceExpressions()
+        console.log(detections)
+        const resizedDetections = faceapi.resizeResults(detections, displaySize)
+        canvas.getContext('2d').clearRect(0, 0, canvas.width, canvas.height)
+        faceapi.draw.drawDetections(canvas, resizedDetections)
+        faceapi.draw.drawFaceLandmarks(canvas, resizedDetections)
+        faceapi.draw.drawFaceExpressions(canvas, resizedDetections)
+
+    }, 1)
+})</script>
   <style>
     video {
       border-radius: 20px;
